RTC5impl.hpp


_declspec(dllimport) void __stdcall n_write_io_port_mask(const UINT CardNo, const UINT Value, const UINT Mask);

_declspec(dllimport) void __stdcall n_write_8bit_port(const UINT CardNo, const UINT Value);

_declspec(dllimport) UINT __stdcall n_read_io_port(const UINT CardNo);

_declspec(dllimport) UINT __stdcall n_read_io_port_buffer(const UINT CardNo, const UINT Index, UINT& Value, long& XPos, long& YPos, UINT& Time);

_declspec(dllimport) UINT __stdcall n_get_io_status(const UINT CardNo);

_declspec(dllimport) void __stdcall n_write_da_x(const UINT CardNo, const UINT x, const UINT Value);

_declspec(dllimport) void __stdcall n_set_laser_off_default(const UINT CardNo, const UINT AnalogOut1, const UINT AnalogOut2, const UINT DigitalOut);

_declspec(dllimport) void __stdcall n_set_port_default(const UINT CardNo, const UINT Port, const UINT Value);

_declspec(dllimport) void __stdcall n_write_io_port(const UINT CardNo, const UINT Value);

_declspec(dllimport) void __stdcall n_write_da_1(const UINT CardNo, const UINT Value);

_declspec(dllimport) void __stdcall n_write_da_2(const UINT CardNo, const UINT Value);

_declspec(dllimport) void __stdcall write_io_port_mask(const UINT Value, const UINT Mask);

_declspec(dllimport) void __stdcall write_8bit_port(const UINT Value);

_declspec(dllimport) UINT __stdcall read_io_port(void);

_declspec(dllimport) UINT __stdcall read_io_port_buffer(const UINT Index, UINT& Value, long& XPos, long& YPos, UINT& Time);

_declspec(dllimport) UINT __stdcall get_io_status(void);

_declspec(dllimport) void __stdcall write_da_x(const UINT x, const UINT Value);

_declspec(dllimport) void __stdcall set_laser_off_default(const UINT AnalogOut1, const UINT AnalogOut2, const UINT DigitalOut);

_declspec(dllimport) void __stdcall set_port_default(const UINT Port, const UINT Value);

_declspec(dllimport) void __stdcall write_io_port(const UINT Value);

_declspec(dllimport) void __stdcall write_da_1(const UINT Value);

_declspec(dllimport) void __stdcall write_da_2(const UINT Value);

_declspec(dllimport) void __stdcall n_disable_laser(const UINT CardNo);

_declspec(dllimport) void __stdcall n_enable_laser(const UINT CardNo);

_declspec(dllimport) void __stdcall n_laser_signal_on(const UINT CardNo);

_declspec(dllimport) void __stdcall n_laser_signal_off(const UINT CardNo);

_declspec(dllimport) void __stdcall n_set_standby(const UINT CardNo, const UINT HalfPeriod, const UINT PulseLength);

_declspec(dllimport) void __stdcall n_set_laser_pulses_ctrl(const UINT CardNo, const UINT HalfPeriod, const UINT PulseLength);

_declspec(dllimport) void __stdcall n_set_firstpulse_killer(const UINT CardNo, const UINT Length);

_declspec(dllimport) void __stdcall n_set_qswitch_delay(const UINT CardNo, const UINT Delay);

_declspec(dllimport) void __stdcall n_set_laser_mode(const UINT CardNo, const UINT Mode);

_declspec(dllimport) void __stdcall n_set_laser_control(const UINT CardNo, const UINT Ctrl);

_declspec(dllimport) void __stdcall n_set_laser_pin_out(const UINT CardNo, const UINT Pins);

_declspec(dllimport) UINT __stdcall n_get_laser_pin_in(const UINT CardNo);

_declspec(dllimport) void __stdcall n_set_softstart_level(const UINT CardNo, const UINT Index, const UINT Level);

_declspec(dllimport) void __stdcall n_set_softstart_mode(const UINT CardNo, const UINT Mode, const UINT Number, const UINT Delay);

_declspec(dllimport) UINT __stdcall n_set_auto_laser_control(const UINT CardNo, const UINT Ctrl, const UINT Value, const UINT Mode, const UINT MinValue, const UINT MaxValue);

_declspec(dllimport) UINT __stdcall n_set_auto_laser_params(const UINT CardNo, const UINT Ctrl, const UINT Value, const UINT MinValue, const UINT MaxValue);

_declspec(dllimport) long __stdcall n_load_auto_laser_control(const UINT CardNo, const char* Name, const UINT No);

_declspec(dllimport) long __stdcall n_load_position_control(const UINT CardNo, const char* Name, const UINT No);

_declspec(dllimport) void __stdcall n_set_default_pixel(const UINT CardNo, const UINT PulseLength);

_declspec(dllimport) void __stdcall n_get_standby(const UINT CardNo, UINT& HalfPeriod, UINT& PulseLength);

_declspec(dllimport) void __stdcall disable_laser(void);

_declspec(dllimport) void __stdcall enable_laser(void);

_declspec(dllimport) void __stdcall laser_signal_on(void);

_declspec(dllimport) void __stdcall laser_signal_off(void);

_declspec(dllimport) void __stdcall set_standby(const UINT HalfPeriod, const UINT PulseLength);

_declspec(dllimport) void __stdcall set_laser_pulses_ctrl(const UINT HalfPeriod, const UINT PulseLength);

_declspec(dllimport) void __stdcall set_firstpulse_killer(const UINT Length);

_declspec(dllimport) void __stdcall set_qswitch_delay(const UINT Delay);

_declspec(dllimport) void __stdcall set_laser_mode(const UINT Mode);

_declspec(dllimport) void __stdcall set_laser_control(const UINT Ctrl);

_declspec(dllimport) void __stdcall set_laser_pin_out(const UINT Pins);

_declspec(dllimport) UINT __stdcall get_laser_pin_in(void);

_declspec(dllimport) void __stdcall set_softstart_level(const UINT Index, const UINT Level);

_declspec(dllimport) void __stdcall set_softstart_mode(const UINT Mode, const UINT Number, const UINT Delay);

_declspec(dllimport) UINT __stdcall set_auto_laser_control(const UINT Ctrl, const UINT Value, const UINT Mode, const UINT MinValue, const UINT MaxValue);

_declspec(dllimport) UINT __stdcall set_auto_laser_params(const UINT Ctrl, const UINT Value, const UINT MinValue, const UINT MaxValue);

_declspec(dllimport) long __stdcall load_auto_laser_control(const char* Name, const UINT No);

_declspec(dllimport) long __stdcall load_position_control(const char* Name, const UINT No);

_declspec(dllimport) void __stdcall set_default_pixel(const UINT PulseLength);

_declspec(dllimport) void __stdcall get_standby(UINT& HalfPeriod, UINT& PulseLength);

_declspec(dllimport) void __stdcall n_set_ext_start_delay(const UINT CardNo, const long Delay, const UINT EncoderNo);

_declspec(dllimport) void __stdcall n_set_rot_center(const UINT CardNo, const long X, const long Y);

_declspec(dllimport) void __stdcall n_simulate_encoder(const UINT CardNo, const UINT EncoderNo);

_declspec(dllimport) UINT __stdcall n_get_marking_info(const UINT CardNo);

_declspec(dllimport) void __stdcall n_set_encoder_speed_ctrl(const UINT CardNo, const UINT EncoderNo, const double Speed, const double Smooth);

_declspec(dllimport) void __stdcall n_set_mcbsp_x(const UINT CardNo, const double ScaleX);

_declspec(dllimport) void __stdcall n_set_mcbsp_y(const UINT CardNo, const double ScaleY);

_declspec(dllimport) void __stdcall n_set_mcbsp_rot(const UINT CardNo, const double Resolution);

_declspec(dllimport) void __stdcall n_get_encoder(const UINT CardNo, long& Encoder0, long& Encoder1);

_declspec(dllimport) void __stdcall n_read_encoder(const UINT CardNo, long& Encoder0_1, long& Encoder1_1, long& Encoder0_2, long& Encoder1_2);

_declspec(dllimport) long __stdcall n_get_mcbsp(const UINT CardNo);

_declspec(dllimport) long __stdcall n_read_mcbsp(const UINT CardNo, const UINT No);

_declspec(dllimport) void __stdcall set_ext_start_delay(const long Delay, const UINT EncoderNo);

_declspec(dllimport) void __stdcall set_rot_center(const long X, const long Y);

_declspec(dllimport) void __stdcall simulate_encoder(const UINT EncoderNo);

_declspec(dllimport) UINT __stdcall get_marking_info(void);

_declspec(dllimport) void __stdcall set_encoder_speed_ctrl(const UINT EncoderNo, const double Speed, const double Smooth);

_declspec(dllimport) void __stdcall set_mcbsp_x(const double ScaleX);

_declspec(dllimport) void __stdcall set_mcbsp_y(const double ScaleY);

_declspec(dllimport) void __stdcall set_mcbsp_rot(const double Resolution);

_declspec(dllimport) void __stdcall get_encoder(long& Encoder0, long& Encoder1);

_declspec(dllimport) void __stdcall read_encoder(long& Encoder0_1, long& Encoder1_1, long& Encoder0_2, long& Encoder1_2);

_declspec(dllimport) long __stdcall get_mcbsp(void);

_declspec(dllimport) long __stdcall read_mcbsp(const UINT No);

_declspec(dllimport) double __stdcall n_get_time(const UINT CardNo);

_declspec(dllimport) void __stdcall n_measurement_status(const UINT CardNo, UINT& Busy, UINT& Pos);

_declspec(dllimport) void __stdcall n_get_waveform(const UINT CardNo, const UINT Channel, const UINT Number, const UINT Ptr);

_declspec(dllimport) void __stdcall n_bounce_supp(const UINT CardNo, const UINT Length);

_declspec(dllimport) void __stdcall n_home_position_xyz(const UINT CardNo, const long XHome, const long YHome, const long ZHome);

_declspec(dllimport) void __stdcall n_home_position(const UINT CardNo, const long XHome, const long YHome);

_declspec(dllimport) void __stdcall n_rs232_config(const UINT CardNo, const UINT BaudRate);

_declspec(dllimport) void __stdcall n_rs232_write_data(const UINT CardNo, const UINT Data);

_declspec(dllimport) void __stdcall n_rs232_write_text(const UINT CardNo, const char* pData);

_declspec(dllimport) UINT __stdcall n_rs232_read_data(const UINT CardNo);

_declspec(dllimport) void __stdcall n_mcbsp_init(const UINT CardNo, const UINT XDelay, const UINT RDelay);

_declspec(dllimport) UINT __stdcall n_get_overrun(const UINT CardNo);

_declspec(dllimport) UINT __stdcall n_get_master_slave(const UINT CardNo);

_declspec(dllimport) void __stdcall n_get_transform(const UINT CardNo, const UINT Number, const UINT Ptr1, const UINT Ptr2, const UINT Ptr, const UINT Code);

_declspec(dllimport) void __stdcall n_stop_trigger(const UINT CardNo);

_declspec(dllimport) void __stdcall n_move_to(const UINT CardNo, const UINT Pos);

_declspec(dllimport) double __stdcall get_time(void);

_declspec(dllimport) void __stdcall measurement_status(UINT& Busy, UINT& Pos);

_declspec(dllimport) void __stdcall get_waveform(const UINT Channel, const UINT Number, const UINT Ptr);

_declspec(dllimport) void __stdcall bounce_supp(const UINT Length);

_declspec(dllimport) void __stdcall home_position_xyz(const long XHome, const long YHome, const long ZHome);

_declspec(dllimport) void __stdcall home_position(const long XHome, const long YHome);

_declspec(dllimport) void __stdcall rs232_config(const UINT BaudRate);

_declspec(dllimport) void __stdcall rs232_write_data(const UINT Data);

_declspec(dllimport) void __stdcall rs232_write_text(const char* pData);

_declspec(dllimport) UINT __stdcall rs232_read_data(void);

_declspec(dllimport) void __stdcall mcbsp_init(const UINT XDelay, const UINT RDelay);

_declspec(dllimport) UINT __stdcall get_overrun(void);

_declspec(dllimport) UINT __stdcall get_master_slave(void);

_declspec(dllimport) void __stdcall get_transform(const UINT Number, const UINT Ptr1, const UINT Ptr2, const UINT Ptr, const UINT Code);

_declspec(dllimport) void __stdcall stop_trigger(void);

_declspec(dllimport) void __stdcall move_to(const UINT Pos);

_declspec(dllimport) void __stdcall n_set_defocus(const UINT CardNo, const long Shift);

_declspec(dllimport) void __stdcall n_goto_xyz(const UINT CardNo, const long X, const long Y, const long Z);

_declspec(dllimport) void __stdcall n_goto_xy(const UINT CardNo, const long X, const long Y);

_declspec(dllimport) long __stdcall n_get_z_distance(const UINT CardNo, const long X, const long Y, const long Z);

_declspec(dllimport) void __stdcall set_defocus(const long Shift);

_declspec(dllimport) void __stdcall goto_xyz(const long X, const long Y, const long Z);

_declspec(dllimport) void __stdcall goto_xy(const long X, const long Y);

_declspec(dllimport) long __stdcall get_z_distance(const long X, const long Y, const long Z);