RTC5Import.pas

procedure n_write_io_port_mask(CardNo: LongWord; Value: LongWord; Mask: LongWord); stdcall; external RTC5DLL;
procedure n_write_8bit_port(CardNo: LongWord; Value: LongWord); stdcall; external RTC5DLL;
function  n_read_io_port(CardNo: LongWord): LongWord; stdcall; external RTC5DLL;
function  n_read_io_port_buffer(CardNo: LongWord; Index: LongWord; var Value: LongWord; var XPos: LongInt; var YPos: LongInt; var Time: LongWord): LongWord; stdcall; external RTC5DLL;
function  n_get_io_status(CardNo: LongWord): LongWord; stdcall; external RTC5DLL;
procedure n_write_da_x(CardNo: LongWord; x: LongWord; Value: LongWord); stdcall; external RTC5DLL;
procedure n_set_laser_off_default(CardNo: LongWord; AnalogOut1: LongWord; AnalogOut2: LongWord; DigitalOut: LongWord); stdcall; external RTC5DLL;
procedure n_set_port_default(CardNo: LongWord; Port: LongWord; Value: LongWord); stdcall; external RTC5DLL;
procedure n_write_io_port(CardNo: LongWord; Value: LongWord); stdcall; external RTC5DLL;
procedure n_write_da_1(CardNo: LongWord; Value: LongWord); stdcall; external RTC5DLL;
procedure n_write_da_2(CardNo: LongWord; Value: LongWord); stdcall; external RTC5DLL;
procedure write_io_port_mask(Value: LongWord; Mask: LongWord); stdcall; external RTC5DLL;
procedure write_8bit_port(Value: LongWord); stdcall; external RTC5DLL;
function  read_io_port(): LongWord; stdcall; external RTC5DLL;
function  read_io_port_buffer(Index: LongWord; var Value: LongWord; var XPos: LongInt; var YPos: LongInt; var Time: LongWord): LongWord; stdcall; external RTC5DLL;
function  get_io_status(): LongWord; stdcall; external RTC5DLL;
procedure write_da_x(x: LongWord; Value: LongWord); stdcall; external RTC5DLL;
procedure set_laser_off_default(AnalogOut1: LongWord; AnalogOut2: LongWord; DigitalOut: LongWord); stdcall; external RTC5DLL;
procedure set_port_default(Port: LongWord; Value: LongWord); stdcall; external RTC5DLL;
procedure write_io_port(Value: LongWord); stdcall; external RTC5DLL;
procedure write_da_1(Value: LongWord); stdcall; external RTC5DLL;
procedure write_da_2(Value: LongWord); stdcall; external RTC5DLL;
procedure n_disable_laser(CardNo: LongWord); stdcall; external RTC5DLL;
procedure n_enable_laser(CardNo: LongWord); stdcall; external RTC5DLL;
procedure n_laser_signal_on(CardNo: LongWord); stdcall; external RTC5DLL;
procedure n_laser_signal_off(CardNo: LongWord); stdcall; external RTC5DLL;
procedure n_set_standby(CardNo: LongWord; HalfPeriod: LongWord; PulseLength: LongWord); stdcall; external RTC5DLL;
procedure n_set_laser_pulses_ctrl(CardNo: LongWord; HalfPeriod: LongWord; PulseLength: LongWord); stdcall; external RTC5DLL;
procedure n_set_firstpulse_killer(CardNo: LongWord; Length: LongWord); stdcall; external RTC5DLL;
procedure n_set_qswitch_delay(CardNo: LongWord; Delay: LongWord); stdcall; external RTC5DLL;
procedure n_set_laser_mode(CardNo: LongWord; Mode: LongWord); stdcall; external RTC5DLL;
procedure n_set_laser_control(CardNo: LongWord; Ctrl: LongWord); stdcall; external RTC5DLL;
procedure n_set_laser_pin_out(CardNo: LongWord; Pins: LongWord); stdcall; external RTC5DLL;
function  n_get_laser_pin_in(CardNo: LongWord): LongWord; stdcall; external RTC5DLL;
procedure n_set_softstart_level(CardNo: LongWord; Index: LongWord; Level: LongWord); stdcall; external RTC5DLL;
procedure n_set_softstart_mode(CardNo: LongWord; Mode: LongWord; Number: LongWord; Delay: LongWord); stdcall; external RTC5DLL;
function  n_set_auto_laser_control(CardNo: LongWord; Ctrl: LongWord; Value: LongWord; Mode: LongWord; MinValue: LongWord; MaxValue: LongWord): LongWord; stdcall; external RTC5DLL;
function  n_set_auto_laser_params(CardNo: LongWord; Ctrl: LongWord; Value: LongWord; MinValue: LongWord; MaxValue: LongWord): LongWord; stdcall; external RTC5DLL;
function  n_load_auto_laser_control(CardNo: LongWord; Name: PChar; No: LongWord): LongInt; stdcall; external RTC5DLL;
function  n_load_position_control(CardNo: LongWord; Name: PChar; No: LongWord): LongInt; stdcall; external RTC5DLL;
procedure n_set_default_pixel(CardNo: LongWord; PulseLength: LongWord); stdcall; external RTC5DLL;
procedure n_get_standby(CardNo: LongWord; var HalfPeriod: LongWord; var PulseLength: LongWord); stdcall; external RTC5DLL;
procedure disable_laser(); stdcall; external RTC5DLL;
procedure enable_laser(); stdcall; external RTC5DLL;
procedure laser_signal_on(); stdcall; external RTC5DLL;
procedure laser_signal_off(); stdcall; external RTC5DLL;
procedure set_standby(HalfPeriod: LongWord; PulseLength: LongWord); stdcall; external RTC5DLL;
procedure set_laser_pulses_ctrl(HalfPeriod: LongWord; PulseLength: LongWord); stdcall; external RTC5DLL;
procedure set_firstpulse_killer(Length: LongWord); stdcall; external RTC5DLL;
procedure set_qswitch_delay(Delay: LongWord); stdcall; external RTC5DLL;
procedure set_laser_mode(Mode: LongWord); stdcall; external RTC5DLL;
procedure set_laser_control(Ctrl: LongWord); stdcall; external RTC5DLL;
procedure set_laser_pin_out(Pins: LongWord); stdcall; external RTC5DLL;
function  get_laser_pin_in(): LongWord; stdcall; external RTC5DLL;
procedure set_softstart_level(Index: LongWord; Level: LongWord); stdcall; external RTC5DLL;
procedure set_softstart_mode(Mode: LongWord; Number: LongWord; Delay: LongWord); stdcall; external RTC5DLL;
function  set_auto_laser_control(Ctrl: LongWord; Value: LongWord; Mode: LongWord; MinValue: LongWord; MaxValue: LongWord): LongWord; stdcall; external RTC5DLL;
function  set_auto_laser_params(Ctrl: LongWord; Value: LongWord; MinValue: LongWord; MaxValue: LongWord): LongWord; stdcall; external RTC5DLL;
function  load_auto_laser_control(Name: PChar; No: LongWord): LongInt; stdcall; external RTC5DLL;
function  load_position_control(Name: PChar; No: LongWord): LongInt; stdcall; external RTC5DLL;
procedure set_default_pixel(PulseLength: LongWord); stdcall; external RTC5DLL;
procedure get_standby(var HalfPeriod: LongWord; var PulseLength: LongWord); stdcall; external RTC5DLL;
procedure n_set_ext_start_delay(CardNo: LongWord; Delay: LongInt; EncoderNo: LongWord); stdcall; external RTC5DLL;
procedure n_set_rot_center(CardNo: LongWord; X: LongInt; Y: LongInt); stdcall; external RTC5DLL;
procedure n_simulate_encoder(CardNo: LongWord; EncoderNo: LongWord); stdcall; external RTC5DLL;
function  n_get_marking_info(CardNo: LongWord): LongWord; stdcall; external RTC5DLL;
procedure n_set_encoder_speed_ctrl(CardNo: LongWord; EncoderNo: LongWord; Speed: Double; Smooth: Double); stdcall; external RTC5DLL;
procedure n_set_mcbsp_x(CardNo: LongWord; ScaleX: Double); stdcall; external RTC5DLL;
procedure n_set_mcbsp_y(CardNo: LongWord; ScaleY: Double); stdcall; external RTC5DLL;
procedure n_set_mcbsp_rot(CardNo: LongWord; Resolution: Double); stdcall; external RTC5DLL;
procedure n_get_encoder(CardNo: LongWord; var Encoder0: LongInt; var Encoder1: LongInt); stdcall; external RTC5DLL;
procedure n_read_encoder(CardNo: LongWord; var Encoder0_1: LongInt; var Encoder1_1: LongInt; var Encoder0_2: LongInt; var Encoder1_2: LongInt); stdcall; external RTC5DLL;
function  n_get_mcbsp(CardNo: LongWord): LongInt; stdcall; external RTC5DLL;
function  n_read_mcbsp(CardNo: LongWord; No: LongWord): LongInt; stdcall; external RTC5DLL;
procedure set_ext_start_delay(Delay: LongInt; EncoderNo: LongWord); stdcall; external RTC5DLL;
procedure set_rot_center(X: LongInt; Y: LongInt); stdcall; external RTC5DLL;
procedure simulate_encoder(EncoderNo: LongWord); stdcall; external RTC5DLL;
function  get_marking_info(): LongWord; stdcall; external RTC5DLL;
procedure set_encoder_speed_ctrl(EncoderNo: LongWord; Speed: Double; Smooth: Double); stdcall; external RTC5DLL;
procedure set_mcbsp_x(ScaleX: Double); stdcall; external RTC5DLL;
procedure set_mcbsp_y(ScaleY: Double); stdcall; external RTC5DLL;
procedure set_mcbsp_rot(Resolution: Double); stdcall; external RTC5DLL;
procedure get_encoder(var Encoder0: LongInt; var Encoder1: LongInt); stdcall; external RTC5DLL;
procedure read_encoder(var Encoder0_1: LongInt; var Encoder1_1: LongInt; var Encoder0_2: LongInt; var Encoder1_2: LongInt); stdcall; external RTC5DLL;
function  get_mcbsp(): LongInt; stdcall; external RTC5DLL;
function  read_mcbsp(No: LongWord): LongInt; stdcall; external RTC5DLL;
function  n_get_time(CardNo: LongWord): Double; stdcall; external RTC5DLL;
procedure n_measurement_status(CardNo: LongWord; var Busy: LongWord; var Pos: LongWord); stdcall; external RTC5DLL;
procedure n_get_waveform(CardNo: LongWord; Channel: LongWord; Number: LongWord; Ptr: PLongInt); stdcall; external RTC5DLL;
procedure n_bounce_supp(CardNo: LongWord; Length: LongWord); stdcall; external RTC5DLL;
procedure n_home_position_xyz(CardNo: LongWord; XHome: LongInt; YHome: LongInt; ZHome: LongInt); stdcall; external RTC5DLL;
procedure n_home_position(CardNo: LongWord; XHome: LongInt; YHome: LongInt); stdcall; external RTC5DLL;
procedure n_rs232_config(CardNo: LongWord; BaudRate: LongWord); stdcall; external RTC5DLL;
procedure n_rs232_write_data(CardNo: LongWord; Data: LongWord); stdcall; external RTC5DLL;
procedure n_rs232_write_text(CardNo: LongWord; pData: PChar); stdcall; external RTC5DLL;
function  n_rs232_read_data(CardNo: LongWord): LongWord; stdcall; external RTC5DLL;
procedure n_mcbsp_init(CardNo: LongWord; XDelay: LongWord; RDelay: LongWord); stdcall; external RTC5DLL;
function  n_get_overrun(CardNo: LongWord): LongWord; stdcall; external RTC5DLL;
function  n_get_master_slave(CardNo: LongWord): LongWord; stdcall; external RTC5DLL;
procedure n_get_transform(CardNo: LongWord; Number: LongWord; Ptr1: PLongInt; Ptr2: PLongInt; Ptr: PLongWord; Code: LongWord); stdcall; external RTC5DLL;
procedure n_stop_trigger(CardNo: LongWord); stdcall; external RTC5DLL;
procedure n_move_to(CardNo: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
function  get_time(): Double; stdcall; external RTC5DLL;
procedure measurement_status(var Busy: LongWord; var Pos: LongWord); stdcall; external RTC5DLL;
procedure get_waveform(Channel: LongWord; Number: LongWord; Ptr: PLongInt); stdcall; external RTC5DLL;
procedure bounce_supp(Length: LongWord); stdcall; external RTC5DLL;
procedure home_position_xyz(XHome: LongInt; YHome: LongInt; ZHome: LongInt); stdcall; external RTC5DLL;
procedure home_position(XHome: LongInt; YHome: LongInt); stdcall; external RTC5DLL;
procedure rs232_config(BaudRate: LongWord); stdcall; external RTC5DLL;
procedure rs232_write_data(Data: LongWord); stdcall; external RTC5DLL;
procedure rs232_write_text(pData: PChar); stdcall; external RTC5DLL;
function  rs232_read_data(): LongWord; stdcall; external RTC5DLL;
procedure mcbsp_init(XDelay: LongWord; RDelay: LongWord); stdcall; external RTC5DLL;
function  get_overrun(): LongWord; stdcall; external RTC5DLL;
function  get_master_slave(): LongWord; stdcall; external RTC5DLL;
procedure get_transform(Number: LongWord; Ptr1: PLongInt; Ptr2: PLongInt; Ptr: PLongWord; Code: LongWord); stdcall; external RTC5DLL;
procedure stop_trigger(); stdcall; external RTC5DLL;
procedure move_to(Pos: LongWord); stdcall; external RTC5DLL;
procedure n_set_defocus(CardNo: LongWord; Shift: LongInt); stdcall; external RTC5DLL;
procedure n_goto_xyz(CardNo: LongWord; X: LongInt; Y: LongInt; Z: LongInt); stdcall; external RTC5DLL;
procedure n_goto_xy(CardNo: LongWord; X: LongInt; Y: LongInt); stdcall; external RTC5DLL;
function  n_get_z_distance(CardNo: LongWord; X: LongInt; Y: LongInt; Z: LongInt): LongInt; stdcall; external RTC5DLL;
procedure set_defocus(Shift: LongInt); stdcall; external RTC5DLL;
procedure goto_xyz(X: LongInt; Y: LongInt; Z: LongInt); stdcall; external RTC5DLL;
procedure goto_xy(X: LongInt; Y: LongInt); stdcall; external RTC5DLL;
function  get_z_distance(X: LongInt; Y: LongInt; Z: LongInt): LongInt; stdcall; external RTC5DLL;
